# Smash

./: .gitignore  AUDIT.md  INSTALL.md  README.md  compress.html  delete.html  from-images.html  index.html  merge.html  ocr.html  package-lock.json  package.json  page-numbers.html  protect.html  reorder.html  rotate.html  service-worker.js  split.html  svelte.config.js  to-images.html  unlock.html  watermark.html
.github/workflows/: deploy.yml  release.yml
_app/: version.json
_app/immutable/assets/: 0.BUNWnwVh.css  0.C_7z1KUn.css  0.DR1mLT1i.css  0.DrA930xC.css  0.Glv1YW6g.css  0.Tn87xSOa.css
_app/immutable/chunks/: -PWc8o5H.js  09RalgZF.js  0rMGr4A-.js  1pClWpLe.js  2UaQX_d-.js  2ZCcLu1N.js  2p5tilid.js  3RZ0MD2b.js  3q9SGjlK.js  4JqvJNds.js  56Vd4p1h.js  5ETUT9_9.js  66DXu9jN.js  6E3px7Kr.js  6HDFXReN.js  7Dfgy9IJ.js  7NnZuIKL.js  7Qnq5RmD.js  92HlhZQ2.js  9V_FjSn7.js  9xSlwEsF.js  A0yu-Fy5.js  Aa7uebQN.js  B1LvT5YJ.js  B1h2izuM.js  B1ijT33f.js  B1jxlY0_.js  B1qcDWnC.js  B2ZbE5rx.js  B2hMdp0w.js  B3JpXmhU.js  B4IxQmz1.js  B5McELYr.js  B6NV9k3I.js  B6mOgsMA.js  B6pf1Lel.js  B8ISZoac.js  B9GAosCT.js  B9MancQR.js  B9kKsGqu.js  (+451 more)
docs/: index.html  manifest.json  service-worker.js
docs/_app/: version.json
src/: app.css  app.html  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ghostscript.rs  lib.rs  main.rs  qpdf.rs
src-tauri/src/commands/: compress.rs  merge.rs  mod.rs  protect.rs  split.rs  utils.rs
src/lib/: index.ts
src/routes/: +layout.svelte  +page.svelte
static/: manifest.json
(+473 files in other folders)
