[package]
name = "smash"
version = "1.0.0"
description = "Privacy-first PDF tools - compress, merge, split, protect"
authors = ["Ishan Jalan"]
license = "MIT"
repository = "https://github.com/ishanjalan/Smash"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "smash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
thiserror = "1.0"
which = "6"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
